fix explorer tools visibility

--- a/src/demo/ui/Layout/UiApp.module.css
+++ b/src/demo/ui/Layout/UiApp.module.css
@@ -17,11 +17,13 @@
 }
 
 .top {
-    /*display: flex;*/
-    /*flex-direction: row;*/
+    display: flex;
+    flex-direction: row;
     /*padding-left: 25px;*/
     position: absolute;
-    z-index: 10;
+    z-index: 1000;
+    top: 100px;
+    left: 100px;
 }
 
 .left {
